kubernetes-templates/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: flask-deployment
    namespace: <your-name-space> # change this to your namespace
spec:
    replicas: 1
    selector:
        matchLabels:
            app: flask
    template:
        metadata:
            labels:
                app: flask
        spec:
            serviceAccountName: foldify-service-account
            securityContext:
                runAsUser: 1000
                runAsNonRoot: true
                seccompProfile:
                    type: RuntimeDefault
            containers:
                - name: flask
                  image: <your-image> # change <your-image> to your backend application image
                  imagePullPolicy: Always
                  resources:
                      requests:
                          cpu: 100m
                          memory: 512Mi
                      limits:
                          cpu: 2
                          memory: 16Gi
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                  ports:
                      - containerPort: 8080
                  volumeMounts:
                      - name: <volume> # change <volume> to your desired volume name
                        mountPath: "/path/to/results" # change this to your actual mount path
            volumes:
                - name: <volume> # change <volume> to your desired volume name
                  persistentVolumeClaim:
                      claimName: <pvc-name> # change <pvc-name> to your actual PVC name
---
apiVersion: v1
kind: Service
metadata:
    name: flask-service
spec:
    type: ClusterIP
    ports:
        - protocol: TCP
          name: flask-service-port
          port: 8080
          targetPort: 8080
    selector:
        app: flask
