kubernetes-templates/nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nextjs-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nextjs
    template:
        metadata:
            labels:
                app: nextjs
        spec:
            securityContext:
                runAsUser: 1000
                runAsNonRoot: true
                seccompProfile:
                    type: RuntimeDefault
            containers:
                - name: nextjs
                  image: <your-frontend-image> # change this to your Next.js image
                  command:
                      - "/bin/sh"
                      - "-c"
                      - "cd /app && npm run build && npm start"
                  imagePullPolicy: Always
                  resources:
                      requests:
                          cpu: 1
                          memory: 500Mi
                      limits:
                          cpu: 8
                          memory: 8Gi
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: nextjs-service
spec:
    type: ClusterIP
    ports:
        - protocol: TCP
          name: foldify-client-port
          port: 3000
          targetPort: 3000
    selector:
        app: nextjs
